# dfinder-app

./: .gitignore  Dockerfile  readme.md
dfinder-app/: pyproject.toml
dfinder-app/dfinder-app/: main.py
dfinder-app/dfinder-app/nginx/: default.conf
dfinder-app/tests/: test_dfinder_app.py
web/: README.md  package.json
web-2/: README.md  package.json
web-2/src/: App.vue
web-2/src/components/: CycleInstructions.vue  Diagram.vue  DivisionInput.vue  RefList.vue
web-2/src/store/: index.ts
web/src/: App.vue  main.js
web/src/components/: CycleInstructions.vue  Diagram.vue  DiagramContainer.vue  DiagramStyling.vue  DiagramsContainer.vue  DivisionInput.vue  HelloWorld.vue  Ref.vue
web/src/repositories/: ProjectRepository.js
web/src/store/: index.ts
