[tool.poetry]
name = "dfinder-app"
version = "0.1.0"
description = ""
authors = ["Joeperdefloep <ikbendeleukstethuis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.17.6"
dfinder = {git = "https://github.com/feefladder/DFinder", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
